[package]
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
name = "dump_links"
version = "0.5.0"
edition = "2018"

homepage = "https://github.com/little-dude/netlink"
license = "MIT"
readme = "../../../README.md"
repository = "https://github.com/little-dude/netlink"

[dependencies]
netlink-packet-route = { path = "../..", version = "0.5" }
netlink-sys = { path = "../../../netlink-sys", version = "0.4" }
